fix : Nav bar - sign up button word wrap prb

--- a/src/app/components/layout/Nav/style.module.scss
+++ b/src/app/components/layout/Nav/style.module.scss
@@ -15,7 +15,7 @@
   grid-template-rows: minmax(100px);
 
   @media #{$tablet} {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 100px 1fr;
     grid-row-gap: 20px;
   }
 }
